[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/fonts/aileron_massive.tres" type="FontFile" id=1]
[ext_resource path="res://res/fonts/aileron_bold.tres" type="FontFile" id=2]
[ext_resource path="res://res/fonts/aileron.tres" type="FontFile" id=3]
[ext_resource path="res://scripts/gui/WinScreen.gd" type="Script" id=4]

[node name="WinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -28.0
offset_right = -16.0
offset_bottom = -28.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_right = 1.012
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -122.0
offset_right = 2.60803
offset_bottom = 73.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.254902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -135.0
offset_right = 200.0
offset_bottom = 135.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouWon" type="RichTextLabel" parent="VBoxContainer"]
offset_top = 20.0
offset_right = 400.0
offset_bottom = 100.0
custom_minimum_size = Vector2( 0, 80 )
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
text = "[center][wave]You Won![/wave][/center]"
text = "You Won!"
scroll_active = false

[node name="Time" type="RichTextLabel" parent="VBoxContainer"]
offset_top = 104.0
offset_right = 400.0
offset_bottom = 144.0
custom_minimum_size = Vector2( 0, 40 )
mouse_filter = 2
theme_override_fonts/bold_font = ExtResource( 2 )
theme_override_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
text = "[center][b]03:30[/b]         You got the world record![/center]"
text = "03:30         You got the world record!"

[node name="Control2" type="Control" parent="VBoxContainer"]
offset_top = 148.0
offset_right = 400.0
offset_bottom = 153.0
custom_minimum_size = Vector2( 0, 5 )
mouse_filter = 2

[node name="NameDetails" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 157.0
offset_right = 400.0
offset_bottom = 187.0
custom_minimum_size = Vector2( 0, 30 )
mouse_filter = 2
alignment = 1

[node name="Name" type="LineEdit" parent="VBoxContainer/NameDetails"]
offset_left = 69.0
offset_right = 269.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 200, 30 )
placeholder_text = "What's your name?"

[node name="Submit" type="Button" parent="VBoxContainer/NameDetails"]
offset_left = 273.0
offset_right = 330.0
offset_bottom = 30.0
text = "Submit"

[node name="SubmissionStatus" type="Label" parent="VBoxContainer"]
visible = false
offset_top = 182.0
offset_right = 400.0
offset_bottom = 196.0
text = "Submitting..."
align = 1

[node name="Control" type="Control" parent="VBoxContainer"]
offset_top = 191.0
offset_right = 400.0
offset_bottom = 216.0
custom_minimum_size = Vector2( 0, 25 )
mouse_filter = 2

[node name="Actions" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 220.0
offset_right = 400.0
offset_bottom = 250.0
custom_minimum_size = Vector2( 0, 30 )
mouse_filter = 2
alignment = 1

[node name="Replay" type="Button" parent="VBoxContainer/Actions"]
offset_left = 110.0
offset_right = 185.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 75, 0 )
text = "Replay"

[node name="Menu" type="Button" parent="VBoxContainer/Actions"]
offset_left = 189.0
offset_right = 290.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 75, 0 )
text = "Back To Menu"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="VBoxContainer/NameDetails/Submit" to="." method="_on_Submit_pressed"]
[connection signal="pressed" from="VBoxContainer/Actions/Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="VBoxContainer/Actions/Menu" to="." method="_on_Menu_pressed"]
